# level_viewer

./: .gitignore  CHANGELOG.md  Cargo copy.toml  Cargo.toml  LICENSE  README.md  TODO.md  blender_import.py  cog.toml  diff.txt  dist-workspace.toml  pyproject.toml  shader_stats.py
.cargo/: config.toml
crates/scrap_parser/: Cargo.toml
crates/scrap_parser/src/: lib.rs  packed_vfs.rs  parser.rs
docs/: KEYBOARD_SHORTCUTS.md  chunk_reference.md  parser_structures.md  scrap_network_protocol.md  shader_assignment.md  shader_render_logic.md  sscorer_ui_menu_system.md
plots/: main.py
src/: asset_loader.rs  export.rs  find_scrap.rs  main.rs  materials.rs  packed_vfs.rs  parser.rs  pixel_shader.rs
src/shaders/: test.wgsl
wix/: main.wxs
