[package]
authors = ["Earthnuker <earthnuker@gmail.com>"]
name = "level_viewer"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ReScrap/level_viewer"
description = "A level viewer for the game American McGee's Scrapland"

[package.metadata.wix]
upgrade-guid = "C281C687-92B2-4DD0-B757-FA6CB11B151A"
path-guid = "A8728CA0-C308-4C48-AB79-47ADC765A5C5"
license = false
eula = false

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
binrw = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
enum-iterator = "2.3"
fs-err = "3.3"
indexmap = { version = "2.13", features = ["serde"] }
ini = "1.3"
memmap2 = "0.9"
num-derive = "0.4"
num-traits = "0.2"
regex = "1.12"
rhexdump = "0.2"
serde = { version = "1.0", features = ["derive"] }
steamlocate = "2.0"
vfs = "0.12"
walkdir = "2.5"
bevy = { version = "0.18.0", features = ["dds","bmp", "dynamic_linking"] }
bevy-inspector-egui = "0.36"
smooth-bevy-cameras = "0.14.0"
egui_file = "0.25"
petgraph = "0.8"
rstar = { version = "0.12", features = ["mint"] }
rfd = "0.17"
itertools = "0.14.0"
pid = "4.0.0"
byteorder = "1.5.0"
parry3d = "0.26.0"
oxipng = "10.1.0"
imagequant = "4.4.1"
png = "0.18.1"
zip = { version = "8.1.0", default-features = false }
image = { version = "0.25.9", default-features = false, features = [
  "dds",
  "png",
] }
texpresso = "2.0.2"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
leafwing-input-manager = "0.20.0"
color-eyre = "0.6.5"
bevy_debug_log = "0.8.1"
bilge = "0.3.0"
egui_plot = "0.34.1"
serde_path_to_error = "0.1.20"
