[package]
authors = ["Earthnuker <earthnuker@gmail.com>"]
name = "level_viewer"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/ReScrap/level_viewer"
description = "A level viewer for the game American McGee's Scrapland"

[workspace]
members = [".", "crates/scrap_parser"]

[package.metadata.wix]
upgrade-guid = "4310959D-45C3-45D3-B8A0-3B36BFAFEF85"
path-guid = "B9FD19DB-FADE-4BE5-BCCE-5AE3B34FD269"
license = false
eula = false

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
binrw = "0.15.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
enum-iterator = "2.3"
fs-err = "3.3"
indexmap = "2.13"
ini = "1.3"
memmap2 = "0.9"
num-derive = "0.4"
num-traits = "0.2"
regex = "1.12"
rhexdump = "0.2"
steamlocate = "2.0"
vfs = "0.12"
walkdir = "2.5"
bevy = { version = "0.18.0", features = ["dds","bmp"] }
bevy-inspector-egui = "0.36"
smooth-bevy-cameras = "0.14.0"
egui_file = "0.25"
petgraph = "0.8"
rstar = { version = "0.12", features = ["mint"] }
rfd = "0.17"
itertools = "0.14.0"
pid = "4.0.0"
byteorder = "1.5.0"
parry3d = "0.26.0"
oxipng = "10.1.0"
imagequant = "4.4.1"
png = "0.18.1"
zip = { version = "8.1.0", default-features = false }
image = { version = "0.25.10", default-features = false, features = [
  "dds",
  "png",
] }
texpresso = "2.0.2"
serde_json = { version = "1.0.149", features = ["preserve_order","float_roundtrip"] }
leafwing-input-manager = "0.20.0"
color-eyre = "0.6.5"
bevy_debug_log = "0.8.1"
bilge = "0.3.0"
egui_plot = "0.34.1"
serde_path_to_error = "0.1.20"
dds = "0.2.0"
flate2 = "1.1.9"
crossbeam-channel = "0.5.15"
scrap_parser = { path = "crates/scrap_parser" }
rand = "0.10.0"
rediff = "1.0.0"
facet = "0.44.3"
facet-json = "0.44.5"
