[package]
name = "scrap_parser"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bilge = "0.3.0"
binrw = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.5"
configparser = { version = "3.1.0", features = ["indexmap"] }
enum-iterator = "2.3"
fs-err = "3.3"
futures-lite = "2.6.1"
indexmap = { version = "2.13", features = ["serde"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
memmap2 = "0.9"
num-derive = "0.4"
num-traits = "0.2"
rhexdump = "0.2"
serde = { version = "1.0", features = ["derive"] }
vfs = "0.12"
walkdir = "2.5"
glob = "0.3.3"
encoding = "0.2.33"
facet = { version = "0.44.3", features = ["chrono", "indexmap"] }

[dev-dependencies]
serde_json = { version = "1.0.149", features = ["preserve_order", "float_roundtrip"] }
